--- a/font/index.html
+++ b/font/index.html
@@ -11,9 +11,9 @@
 		<header>
 
 			<!-- WEBSITE LOGO-->
-			<img id="logo" src="svgconception/logobd.svg" alt="logo de la société Développeur Web">
+			<img id="logo" src="svgconception/logobd.svg">
 			<!-- MENU NAV ICON-->
-			<nav id="home" alt="icône de navigation vers la page d'Accueil">
+			<nav id="home"> <!-- à retravailler -->
 				<a href="#"></a>
 			</nav>
 
