--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
 			<nav id="home" alt="icône de navigation vers la page d'Accueil">
 				<a href="#"></a>
 			</nav>
+			<nav id="linkedin">
+				<a href="#" id='linkedinlink'></a>
+			</nav>
+			<a href="#" id="devislink">Votre devis gratuit !</a>
+
+		
+
 
 			
 
@@ -28,17 +35,15 @@
 
 				</nav>
 				<a class="menu" href="index.html">
-					<span id="portfolio">PORTFOLIO</span>
+					<span id="portfolio">exp&eacute;riences</span>
 				</a>
 				<a class="menu" href="index.html">
-					<span id="projet">PROJET</span>
+					<span id="projet">tarifs</span>
 				</a>
 				<a class="menu" href="index.html">
-					<span id="contact">CONTACTEZ-MOI</span>
+					<span id="contact">contactez-moi</span>
 				</a>
-				<nav id="linkedin">
-					<a href="#" id='linkedinlink'></a>
-				</nav>
+				
 			</nav>
 			<!-- END NAV TOP PAGE-->
 
@@ -51,6 +56,30 @@
 		<h2>
 			<strong id="bannerspan">La créativité, le professionalisme.</strong>
 		</h2>
-		</section>		  
+		</section>
+		
+		<section id="compétences">
+			<div class="compétences_block">
+				<img src="svgconception/diplome.svg" class="compétences_img">&ensp;&ensp;&ensp;
+				<h3 class="compétences_text">
+					<strong>Diplomé</strong> d'un Titre Professionnel de niveau 5 : Développeur Web et Web Mobile
+				</h3>
+			</div>
+			<div class="compétences_block">
+				<img src="media/openclassrooms.png" class="compétences_img">&ensp;&ensp;&ensp;
+				<h3 class="compétences_text">
+					&#43; <strong>20 Certificats en dévelopemment web</strong> et graphisme &#40;Openclassroom&#41;
+				</h3>
+			</div>
+
+			<div class="compétences_block">
+				<img src="svgconception/agile.svg" class="compétences_img">&ensp;&ensp;&ensp;
+				<h3 class="compétences_text">
+					Développeur formé aux méthodologies Agile et S.C.R.U.M afin de garantir vos satisfactions.
+				</h3>
+			</div>
+
+		</section>
+		
     </body>
 </html>
