--- a/index.html
+++ b/index.html
@@ -53,11 +53,13 @@
 
 		<!-- CONTENT -->
 		<section id="banner">
-		<h2>
-			<strong id="bannerspan">La créativité, le professionalisme.</strong>
-		</h2>
+			<h2>
+				<strong id="banner_span">La créativité, le professionalisme.</strong>
+			</h2>
 		</section>
 		
+
+
 		<section id="compétences">
 			<div class="compétences_block">
 				<img src="svgconception/diplome.svg" class="compétences_img">&ensp;&ensp;&ensp;
@@ -71,14 +73,12 @@
 					&#43; <strong>20 Certificats en dévelopemment web</strong> et graphisme &#40;Openclassroom&#41;
 				</h3>
 			</div>
-
 			<div class="compétences_block">
 				<img src="svgconception/agile.svg" class="compétences_img">&ensp;&ensp;&ensp;
 				<h3 class="compétences_text">
-					Développeur formé aux méthodologies Agile et S.C.R.U.M afin de garantir vos satisfactions.
+					Développeur formé aux méthodologies Agile et S.C.R.U.M afin de garantir votre satisfaction.
 				</h3>
 			</div>
-
 		</section>
 		
     </body>
