--- a/index.html
+++ b/index.html
@@ -59,27 +59,56 @@
 		</section>
 		
 
+		<main>
+			<section id="compétences">
+				<div class="compétences_block">
+					<img src="svgconception/diplome.svg" class="compétences_img">&ensp;&ensp;&ensp;
+					<h3 class="compétences_text">
+						<strong>Diplomé</strong> d'un Titre Professionnel de niveau 5 : Développeur Web et Web Mobile
+					</h3>
+				</div>
+				<div class="compétences_block">
+					<img src="media/openclassrooms.png" class="compétences_img">&ensp;&ensp;&ensp;
+					<h3 class="compétences_text">
+						&#43; <strong>20 Certificats en dévelopemment web</strong> et graphisme &#40;Openclassroom&#41;
+					</h3>
+				</div>
+				<div class="compétences_block">
+					<img src="svgconception/agile.svg" class="compétences_img">&ensp;&ensp;&ensp;
+					<h3 class="compétences_text">
+						Développeur formé aux méthodologies Agile et S.C.R.U.M afin de garantir votre satisfaction.
+					</h3>
+				</div>
+			</section>
 
-		<section id="compétences">
-			<div class="compétences_block">
-				<img src="svgconception/diplome.svg" class="compétences_img">&ensp;&ensp;&ensp;
-				<h3 class="compétences_text">
-					<strong>Diplomé</strong> d'un Titre Professionnel de niveau 5 : Développeur Web et Web Mobile
-				</h3>
-			</div>
-			<div class="compétences_block">
-				<img src="media/openclassrooms.png" class="compétences_img">&ensp;&ensp;&ensp;
-				<h3 class="compétences_text">
-					&#43; <strong>20 Certificats en dévelopemment web</strong> et graphisme &#40;Openclassroom&#41;
-				</h3>
-			</div>
-			<div class="compétences_block">
-				<img src="svgconception/agile.svg" class="compétences_img">&ensp;&ensp;&ensp;
-				<h3 class="compétences_text">
-					Développeur formé aux méthodologies Agile et S.C.R.U.M afin de garantir votre satisfaction.
-				</h3>
-			</div>
-		</section>
+			<section id="baseline">
+				<h2>Je conçois <br> des  interfaces pensées <br> pour vous simplifier  la vie</h2>
+
+			</section>
+			<section id="selfdescription">
+				<div>
+					<h3>Qui suis-je ?</h3>
+					<strong>Bryan Delaitre</strong>, <mark alt="jeunes développeur dynamique">19 ans</mark>, et développeur fullstack entrepreneur en région PACA.
+					<p>En plus de monter ma société, j'aime passer mon temps à développer des sites web et applications pour des jeunes start-up avec des budgets sérrés</p>
+					<br>
+					<p>Je suis passionné des technologies du web et je mets mes compétences à vos services pour réaliser vos projets</p>
+				</div>
+				<div>
+					<h3><a>Mes réalisations</a></h3>
+					<p>Les expériences parlent d'eux même et je suis fière de vous présenter les miennes. J'ai réalisé aussi bien des sites vitrines WordPress, que des boutiques en ligne avec PrestaShop, mais également des sites nécéssitant leur propres fonctionnalités à développer.</p>
+					<br>
+					<p>Je travail également au mieux pour proposer à mes clients ainsi qu'aux leurs, une interface agréable sur laquelle surfer. L'expériences des utilisateurs m'es primordiale.</p>
+					
+				</div>
+			</section>
+
+			<footer>
+
+			</footer>
+
+
+
+		</main>
 		
     </body>
 </html>
