--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 			</section>
 
 			<section id="baseline">
-				<h2>Je conçois <br> des  interfaces pensées <br> pour vous simplifier  la vie</h2>
+				<h2>Je conçois <br> des  interfaces pensées <br> afin de vous simplifier  la vie</h2>
 
 			</section>
 			<section id="selfdescription">
@@ -100,6 +100,14 @@
 					<p>Je travail également au mieux pour proposer à mes clients ainsi qu'aux leurs, une interface agréable sur laquelle surfer. L'expériences des utilisateurs m'es primordiale.</p>
 					
 				</div>
+			</section>
+
+			<section id="secondbaseline">
+				<strong>
+					Céation de site internet, site vitrine, et site e-commerce.
+					<br>Le tout sur mesure.
+				</strong>
+
 			</section>
 
 			<footer>
