--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<meta charset="utf-8">
 			<meta name="viewport" content="width=device-width, initial=scale=1.0">
 		<link rel="stylesheet" href="style.css">
+		
     </head>
     <body>
 		<!-- MENU TOP PAGE -->
@@ -83,7 +84,6 @@
 
 			<section id="baseline">
 				<h2>Je conçois <br> des  interfaces pensées <br> afin de vous simplifier  la vie</h2>
-
 			</section>
 			<section id="selfdescription">
 				<div>
@@ -107,7 +107,62 @@
 					Céation de site internet, site vitrine, et site e-commerce.
 					<br>Le tout sur mesure.
 				</strong>
+			</section>
 
+			<h2 id="compétencestechniques_title">Compétences Techniques</h2>
+			<section id="compétencestechniques">
+				<div>
+					<h3>d&eacute;veloppement web</h3>
+					<p>Je développe mes sites web avec les langages HTML & CSS ainsi que Javascript et leurs Framework (bootstrap, jQuery...) pour le front-end. Et j'intervient également avec PHP et Symfony pour le back-end</p>
+				</div>
+				<div>
+					<h3>r&eacute;f&eacute;rencement naturel</h3>
+					<p>Formé par un des meilleur dans son domaine en France. Je saurais donc optimiser le référencement de votre site pour augmenter et atteindre un maximum de consommateur sur les navigateurs de recherche les pus utilisés</p>
+				</div>
+				<div>
+					<h3>des visuels raffin&eacute;s</h3>
+					<p>J'aime rendre les choses simples et faciles à comprendre. C'est pour cela que vous pouvez être persuadé d'avoir des interfaces recherchées, optimisées, et facile d'utilisation.</p>
+					</h3>
+				</div>
+				<div>
+					<h3>responsive web design</h3>
+					<p>Création, adaptation, et intégration de thème 100% sur mesure et responsive pour les sites codés mains. Utilisation de thème WordPress et Prestashop. Tous les déploiement son adaptés pour les smartphones et tablettes.</p>
+				</div>
+				<div>
+					<h3>d&eacute;veloppeur full stack</h3>
+					<p>Malgré mon jeune âge, j'ai été formé sur tout les combats. Je peux intervenir tant sur le frontend que sur le backend. Aussi bien en conception qu'en maintenance.</p>
+				</div>
+				<div>
+					<h3>d&eacute;veloppement agile</h3>
+					<p>Un développeur de se centrer sur son efficacité et la satisfaction de ses clients avant tout. C'est pourquoi il est important de toujours construire son projet à partir d'un cahier des charges structuré. Avec des features, backlog, sprints et scrums.</p>
+				</div>
+			</section>
+
+			<section id="compétencessoft">
+				<div>
+					<h3></h3>
+					<p></p>
+				</div>
+				<div>
+					<h3></h3>
+					<p></p>
+				</div>
+				<div>
+					<h3></h3>
+					<p></p>
+				</div>
+				<div>
+					<h3></h3>
+					<p></p>
+				</div>
+				<div>
+					<h3></h3>
+					<p></p>
+				</div>
+				<div>
+					<h3></h3>
+					<p></p>
+				</div>
 			</section>
 
 			<footer>
