--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
 				</strong>
 			</section>
 
-			<h2 id="compétencestechniques_title">Compétences Techniques</h2>
-			<section id="compétencestechniques">
+			<h2 class="compétences_title">Hard Skills (techniques)</h2>
+			<section class="compétences">
 				<div>
 					<h3>d&eacute;veloppement web</h3>
 					<p>Je développe mes sites web avec les langages HTML & CSS ainsi que Javascript et leurs Framework (bootstrap, jQuery...) pour le front-end. Et j'intervient également avec PHP et Symfony pour le back-end</p>
@@ -138,30 +138,19 @@
 				</div>
 			</section>
 
-			<section id="compétencessoft">
+			<h2 class="compétences_title">Soft Skills (comportementales)</h2>
+			<section class="compétences soft">
 				<div>
-					<h3></h3>
-					<p></p>
+					<h3>Patience et Problem Solving</h3>
+					<p>En tant que développeur on se doit d'être patient en tout point, des compléxités se déclarant souvent en code. Il est chaque jour question de répondre à des problèmes aussi complexes soit-ils.</p>
 				</div>
 				<div>
-					<h3></h3>
-					<p></p>
+					<h3>Gestion du temps</h3>
+					<p>Pour cela je me suis formé à la méthode de gestion agile. Organiser le travail avec des GANTT, réfléchir au temps que prendra chaque features/fonctions à développer, connaître la masse de travail à l'avance sont toutes les qualités derrière un travail rendu à temps.</p>
 				</div>
 				<div>
-					<h3></h3>
-					<p></p>
-				</div>
-				<div>
-					<h3></h3>
-					<p></p>
-				</div>
-				<div>
-					<h3></h3>
-					<p></p>
-				</div>
-				<div>
-					<h3></h3>
-					<p></p>
+					<h3>Communication et esprit d'&eacute;quipe</h3>
+					<p>Dès mes débuts plongés dans des projets en équipe. J'ai pris goût au travail de groupe : communiquer, s'entraider, apprendre ensemble. Loin d'être seul, les travaux en équipe permet également d'avoir un retour objectif sur toutes les réalisations.</p>
 				</div>
 			</section>
 
