--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 				</div>
 			</section>
 
-			<h2 class="compétences_title">Soft Skills (comportementales)</h2>
+			<h2 class="compétences_title soft_title">Soft Skills (comportementales)</h2>
 			<section class="compétences soft">
 				<div>
 					<h3>Patience et Problem Solving</h3>
