--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
 
 			<section id="secondbaseline">
 				<strong>
-					Céation de site internet, site vitrine, et site e-commerce.
-					<br>Le tout sur mesure.
+					Création de site internet, site vitrine, et site e-commerce.
+					Le tout sur mesure.
 				</strong>
 			</section>
 
@@ -117,7 +117,7 @@
 				</div>
 				<div>
 					<h3>r&eacute;f&eacute;rencement naturel</h3>
-					<p>Formé par un des meilleur dans son domaine en France. Je saurais donc optimiser le référencement de votre site pour augmenter et atteindre un maximum de consommateur sur les navigateurs de recherche les pus utilisés</p>
+					<p>Je saurais optimiser le référencement de votre site pour augmenter et atteindre un maximum de consommateur sur les navigateurs de recherche les pus utilisés</p>
 				</div>
 				<div>
 					<h3>des visuels raffin&eacute;s</h3>
