--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 		<meta charset="utf-8">
 			<meta name="viewport" content="width=device-width, initial=scale=1.0">
 		<link rel="stylesheet" href="style.css">
-		
+		<link rel="stylesheet" href="headerfooter.css">
+		<link rel="stylesheet" href="mobile.css" media="all and (max-width:1000px)">
+
     </head>
     <body>
 		<!-- MENU TOP PAGE -->
@@ -22,10 +24,10 @@
 			</nav>
 			<a href="#" id="devislink">Votre devis gratuit !</a>
 
-		
 
 
-			
+
+
 
 			<!-- NAV FOR PHONE MEDIA -->
 
@@ -44,7 +46,7 @@
 				<a class="menu" href="index.html">
 					<span id="contact">contactez-moi</span>
 				</a>
-				
+
 			</nav>
 			<!-- END NAV TOP PAGE-->
 
@@ -58,7 +60,7 @@
 				<strong id="banner_span">La créativité, le professionalisme.</strong>
 			</h2>
 		</section>
-		
+
 
 		<main>
 			<section id="compétences">
@@ -98,7 +100,7 @@
 					<p>Les expériences parlent d'eux même et je suis fière de vous présenter les miennes. J'ai réalisé aussi bien des sites vitrines WordPress, que des boutiques en ligne avec PrestaShop, mais également des sites nécéssitant leur propres fonctionnalités à développer.</p>
 					<br>
 					<p>Je travail également au mieux pour proposer à mes clients ainsi qu'aux leurs, une interface agréable sur laquelle surfer. L'expériences des utilisateurs m'es primordiale.</p>
-					
+
 				</div>
 			</section>
 
@@ -161,6 +163,6 @@
 
 
 		</main>
-		
+
     </body>
 </html>
