--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" href="style.css">
 		<link rel="stylesheet" href="headerfooter.css">
 		<link rel="stylesheet" href="mobile.css" media="all and (max-width:1000px)">
+		<link rel="stylesheet" href="font.css">
 
     </head>
     <body>
@@ -17,17 +18,12 @@
 			<img id="logo" src="svgconception/logobd.svg" alt="logo de la société Développeur Web">
 			<!-- MENU NAV ICON-->
 			<nav id="home" alt="icône de navigation vers la page d'Accueil">
-				<a href="#"></a>
+				<a href="#" id="homelink"></a>
 			</nav>
 			<nav id="linkedin">
 				<a href="#" id='linkedinlink'></a>
 			</nav>
-			<a href="#" id="devislink">Votre devis gratuit !</a>
-
-
-
-
-
+			<a href="#" id="devislink">Acc&eacute;der &agrave; mon CV</a>
 
 			<!-- NAV FOR PHONE MEDIA -->
 
@@ -38,10 +34,10 @@
 
 				</nav>
 				<a class="menu" href="index.html">
-					<span id="portfolio">exp&eacute;riences</span>
+					<span id="portfolio">portfolio</span>
 				</a>
 				<a class="menu" href="index.html">
-					<span id="projet">tarifs</span>
+					<span id="projet">&agrave; la recherche d'un stage</span>
 				</a>
 				<a class="menu" href="index.html">
 					<span id="contact">contactez-moi</span>
@@ -53,11 +49,17 @@
 
 		</header>
 		<!-- END MENU TOP PAGE -->
+		<script type="text/javascript">
+			window.addEventListener("scroll", function(){
+				var header = document.querySelector("header");
+				header.classList.toggle("sticky", window.scrollY > 190);
+			})
+		</script>
 
 		<!-- CONTENT -->
 		<section id="banner">
 			<h2>
-				<strong id="banner_span">La créativité, le professionalisme.</strong>
+				<strong id="banner_span">La créativité, essence même du professionalisme.</strong>
 			</h2>
 		</section>
 
@@ -67,97 +69,110 @@
 				<div class="compétences_block">
 					<img src="svgconception/diplome.svg" class="compétences_img">&ensp;&ensp;&ensp;
 					<h3 class="compétences_text">
-						<strong>Diplomé</strong> d'un Titre Professionnel de niveau 5 : Développeur Web et Web Mobile
+						Actuellement <strong>en formation</strong> pour le Titre Professionnel de niveau 5 : Développeur Web et Web Mobile
 					</h3>
 				</div>
 				<div class="compétences_block">
 					<img src="media/openclassrooms.png" class="compétences_img">&ensp;&ensp;&ensp;
 					<h3 class="compétences_text">
-						&#43; <strong>20 Certificats en dévelopemment web</strong> et graphisme &#40;Openclassroom&#41;
+						&#43; <strong>10 Certificats en dévelopemment web</strong> et graphisme &#40;Openclassroom&#41;
 					</h3>
 				</div>
 				<div class="compétences_block">
 					<img src="svgconception/agile.svg" class="compétences_img">&ensp;&ensp;&ensp;
 					<h3 class="compétences_text">
-						Développeur formé aux méthodologies Agile et S.C.R.U.M afin de garantir votre satisfaction.
+						Je me forme aux méthodologies Agile et S.C.R.U.M afin d'optimiser mon travail.
 					</h3>
 				</div>
 			</section>
 
 			<section id="baseline">
-				<h2>Je conçois <br> des  interfaces pensées <br> afin de vous simplifier  la vie</h2>
+				<h2>Je réfléchis aux visuels les plus simples possibles pour une navigation optimale.</h2>
 			</section>
 			<section id="selfdescription">
 				<div>
 					<h3>Qui suis-je ?</h3>
-					<strong>Bryan Delaitre</strong>, <mark alt="jeunes développeur dynamique">19 ans</mark>, et développeur fullstack entrepreneur en région PACA.
-					<p>En plus de monter ma société, j'aime passer mon temps à développer des sites web et applications pour des jeunes start-up avec des budgets sérrés</p>
+					<strong>Bryan Delaitre</strong>, <mark alt="jeunes développeur dynamique">19 ans</mark>, et je suis développeur web junior en région PACA <strong>à la recherche d'un stage.</strong>
+					<p>En plus d'être passionné par le web, j'aime passer mon temps à développer des sites web et applications pour des projets de toutes formes et idées soient-ils.</p>
 					<br>
-					<p>Je suis passionné des technologies du web et je mets mes compétences à vos services pour réaliser vos projets</p>
+					<p>Je souhaite mettre mes compétences et m'investir à vos services pour réaliser vos projets et acquérir en expériences.</p>
 				</div>
 				<div>
 					<h3><a>Mes réalisations</a></h3>
-					<p>Les expériences parlent d'eux même et je suis fière de vous présenter les miennes. J'ai réalisé aussi bien des sites vitrines WordPress, que des boutiques en ligne avec PrestaShop, mais également des sites nécéssitant leur propres fonctionnalités à développer.</p>
+					<p>Les expériences parlent d'elles mêmes et je suis fière de vous présenter les miennes. J'aime réaliser des sites codé mains, mais je me forme de plus à la conception de site avec CMS (Wordpress et PrestaShop).</p>
 					<br>
-					<p>Je travail également au mieux pour proposer à mes clients ainsi qu'aux leurs, une interface agréable sur laquelle surfer. L'expériences des utilisateurs m'es primordiale.</p>
-
+					<p>Je travaille également au mieux pour progresser et me permettre de vous proposer un travail raffiné, une interface agréable sur laquelle surfer. L'expérience utilisateur m'est primordiale.</p>
 				</div>
 			</section>
+			<a href="#">Accéder à mon portfolio</a>
 
-			<section id="secondbaseline">
-				<strong>
-					Création de site internet, site vitrine, et site e-commerce.
-					Le tout sur mesure.
-				</strong>
-			</section>
+			<article class="compétences_article soft">
+				<h2 class="compétences_title soft_title">Soft Skills (comportementales)</h2>
+				<section class="compétences ">		
+					<div>
+						<h3>Patience et Problem Solving</h3>
+						<p>En tant que développeur on se doit d'être patient en tout point, des compléxités se déclarant souvent en code. Il est chaque jour question de répondre à des problèmes aussi difficiles soient-ils. Il est important de savoir se documenter et se renseigner.</p>
+					</div>
+					<div>
+						<h3>Gestion du temps</h3>
+						<p>Pour cela je me suis formé à la méthode de gestion agile. Organiser le travail avec des GANTT, réfléchir au temps que prendra chaque features/fonctions à développer, connaître la masse de travail à l'avance sont toutes les qualités derrière un travail rendu à temps.</p>
+					</div>
+					<div>
+						<h3>
+							esprit d'&eacute;quipe</h3>
+						<p>Dès mes débuts plongés dans des projets en équipe. J'ai pris goût au travail de groupe : communiquer, s'entraider, apprendre ensemble. Loin d'être seul, les travaux en équipe permettent également d'avoir un retour objectif sur toutes les réalisations.</p>
+					</div>
+				</section>
+			</article>
 
-			<h2 class="compétences_title">Hard Skills (techniques)</h2>
-			<section class="compétences">
-				<div>
-					<h3>d&eacute;veloppement web</h3>
-					<p>Je développe mes sites web avec les langages HTML & CSS ainsi que Javascript et leurs Framework (bootstrap, jQuery...) pour le front-end. Et j'intervient également avec PHP et Symfony pour le back-end</p>
-				</div>
-				<div>
-					<h3>r&eacute;f&eacute;rencement naturel</h3>
-					<p>Je saurais optimiser le référencement de votre site pour augmenter et atteindre un maximum de consommateur sur les navigateurs de recherche les pus utilisés</p>
-				</div>
-				<div>
-					<h3>des visuels raffin&eacute;s</h3>
-					<p>J'aime rendre les choses simples et faciles à comprendre. C'est pour cela que vous pouvez être persuadé d'avoir des interfaces recherchées, optimisées, et facile d'utilisation.</p>
-					</h3>
-				</div>
-				<div>
-					<h3>responsive web design</h3>
-					<p>Création, adaptation, et intégration de thème 100% sur mesure et responsive pour les sites codés mains. Utilisation de thème WordPress et Prestashop. Tous les déploiement son adaptés pour les smartphones et tablettes.</p>
-				</div>
-				<div>
-					<h3>d&eacute;veloppeur full stack</h3>
-					<p>Malgré mon jeune âge, j'ai été formé sur tout les combats. Je peux intervenir tant sur le frontend que sur le backend. Aussi bien en conception qu'en maintenance.</p>
-				</div>
-				<div>
-					<h3>d&eacute;veloppement agile</h3>
-					<p>Un développeur de se centrer sur son efficacité et la satisfaction de ses clients avant tout. C'est pourquoi il est important de toujours construire son projet à partir d'un cahier des charges structuré. Avec des features, backlog, sprints et scrums.</p>
-				</div>
-			</section>
+			<article class="compétences_article">
+				<h2 class="compétences_title">Hard Skills (techniques)</h2>
+				<section class="compétences">
+					<div>
+						<h3>d&eacute;veloppement web</h3>
+						<p>Je développe mes sites web avec les langages HTML & CSS ainsi que Javascript pour le front-end. Et j'intervient également avec PHP et son framework Symfony pour le back-end</p>
+					</div>
+					<div>
+						<h3>r&eacute;f&eacute;rencement naturel</h3>
+						<p>Je saurais auditer et optimiser le référencement de votre site pour augmenter votre audience sur les moteurs de recherches les plus utilisés notamment via l'optimisation OnPage.</p>
+					</div>
+					<div>
+						<h3>des visuels raffin&eacute;s</h3>
+						<p>J'aime rendre les choses simples et faciles à comprendre. C'est pour cela que vous pouvez être persuadé d'avoir des interfaces recherchées, optimisées, et facile d'utilisation.</p>
+						</h3>
+					</div>
+					<div>
+						<h3>responsive web design</h3>
+						<p>Création, adaptation, et intégration de thème 100% sur mesure et responsive pour les sites codés mains. Tous les déploiement sont adaptés pour les smartphones et tablettes.</p>
+					</div>
+					<div>
+						<h3>construction du référencement offpage</h3>
+						<p>Malgré mon jeune âge, j'ai été formé sur tout les combats. J'ai appris à analyser et comprendre le fonctionnement du netlinking pour augmenter le traffic de votre site via des sources externes</p>
+					</div>
+					<div>
+						<h3>d&eacute;veloppement agile</h3>
+						<p>Un développeur doit se centrer sur son efficacité et la satisfaction de ses clients avant tout. C'est pourquoi il est important de toujours construire son projet à partir d'un cahier des charges structuré. Avec des features, backlog, sprints et scrums.</p>
+					</div>
+				</section>
+			</article>
 
-			<h2 class="compétences_title soft_title">Soft Skills (comportementales)</h2>
-			<section class="compétences soft">
-				<div>
-					<h3>Patience et Problem Solving</h3>
-					<p>En tant que développeur on se doit d'être patient en tout point, des compléxités se déclarant souvent en code. Il est chaque jour question de répondre à des problèmes aussi complexes soit-ils.</p>
-				</div>
-				<div>
-					<h3>Gestion du temps</h3>
-					<p>Pour cela je me suis formé à la méthode de gestion agile. Organiser le travail avec des GANTT, réfléchir au temps que prendra chaque features/fonctions à développer, connaître la masse de travail à l'avance sont toutes les qualités derrière un travail rendu à temps.</p>
-				</div>
-				<div>
-					<h3>Communication et esprit d'&eacute;quipe</h3>
-					<p>Dès mes débuts plongés dans des projets en équipe. J'ai pris goût au travail de groupe : communiquer, s'entraider, apprendre ensemble. Loin d'être seul, les travaux en équipe permet également d'avoir un retour objectif sur toutes les réalisations.</p>
-				</div>
-			</section>
+			
 
 			<footer>
-
+				<nav>
+					<ul>
+						<a href="#">portfolio</a>
+						<a href="#">&agrave; la recherche d'un stage</a>
+						<a href="#">contactez-moi</a>
+					</ul>
+				</nav>
+				<nav>
+					<ul>
+						<a href="#">mentions l&eacute;gales</a>
+						<a href="#">rgpd</a>
+					</ul>
+				</nav>
+				&copy;Copyright - 2021 - Bryan DELAITRE 
 			</footer>
 
 
